<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    tools:context=".SendMessage">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/violet"
        android:text="@string/name_of_send_page"
        android:textSize="20sp"
        android:textColor="@color/white"
        android:paddingStart="15dp"
        android:paddingTop="35dp"
        />
    <EditText
        android:id="@+id/et_email_of_receiver"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginHorizontal="20dp"
        style="@style/RoundedEditText"
        android:hint="@string/receiver_email_hint"
        android:textColorHint="@color/grey"
        android:paddingVertical="10dp"
        android:paddingStart="20dp"
        android:drawableLeft="@drawable/message_icon_1"
        android:drawablePadding="10dp"
        />
    <EditText
        android:id="@+id/et_theme_of_message"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginHorizontal="20dp"
        style="@style/RoundedEditText"
        android:hint="@string/theme_hint"
        android:textColorHint="@color/grey"
        android:paddingVertical="10dp"
        android:paddingStart="20dp"
        android:drawableLeft="@drawable/paper_document_icon_1"
        android:drawablePadding="10dp"
        />
    <EditText
        android:id="@+id/et_message_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginHorizontal="20dp"
        style="@style/RoundedEditText"
        android:hint="@string/message_hint"
        android:textColorHint="@color/grey"
        android:paddingVertical="10dp"
        android:paddingStart="20dp"
        android:drawableLeft="@drawable/baseline_message_24"
        android:drawablePadding="10dp"
        />
    <Button
        android:id="@+id/btn_send"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:layout_marginHorizontal="20dp"
        style="@style/RoundedEditText"
        android:text="@string/send_button"
        android:textColor="@color/white"
        android:gravity="center"
        />
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="80dp"
            android:layout_marginHorizontal="20dp"
            style="@style/RoundedEditText"
            android:text="@string/next_button"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            android:gravity="center"
            android:layout_marginBottom="60dp"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>

</LinearLayout>